# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-09-01 15:50:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-74

    Summary:
      Checkpointing BNF work
    Revision:
      missinglib--head--0.0--patch-74


    modified files:
     ChangeLog libsrc/bnf/aBNF_core.ml


2004-09-01 15:43:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-73

    Summary:
      Fixed compilation problems
    Revision:
      missinglib--head--0.0--patch-73


    modified files:
     ChangeLog libsrc/Makefile libsrc/bnf/aBNF_core.ml


2004-09-01 15:36:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      Starting on ABNF core
    Revision:
      missinglib--head--0.0--patch-72


    new files:
     libsrc/bnf/aBNF_core.ml libsrc/bnf/bNF_boot.ml

    modified files:
     ChangeLog libsrc/Makefile libsrc/bnf/bNFparseutil.ml
     libsrc/bnf/bNFparseutil.mli


2004-09-01 14:54:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-71

    Summary:
      Slight updates to BNFparseutil
    Revision:
      missinglib--head--0.0--patch-71


    modified files:
     ChangeLog libsrc/bnf/bNFparseutil.ml
     libsrc/bnf/bNFparseutil.mli


2004-09-01 01:30:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-70

    Summary:
      Added parse utils
    Revision:
      missinglib--head--0.0--patch-70


    new files:
     libsrc/bnf/bNFparseutil.mli

    modified files:
     ChangeLog libsrc/Makefile libsrc/bnf/bNFparseutil.ml
     libsrc/streamutil/streamutil.mli


2004-09-01 00:26:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-69

    Summary:
      Work of BNFparseutil
    Revision:
      missinglib--head--0.0--patch-69


    new files:
     libsrc/bnf/bNFparseutil.ml

    modified files:
     ChangeLog libsrc/strutil/strutil.mli


2004-08-31 21:47:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary:
      Added string_of_charlist function
    Revision: